--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+body {
+  background: rgb(2,0,36);
+  background: linear-gradient(0deg, rgb(0, 0, 4) 39%, rgb(4, 32, 62) 100%, rgba(0,187,215,1) 100%);
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.weatherBox {
+  display: flex;
+  flex-direction: column;
+  background: rgb(255,255,255);
+  background: linear-gradient(137deg, rgba(255,255,255,1) 21%, rgb(193, 193, 193) 100%);
+  border: 1px solid white;
+  width: 380px;
+  height: 500px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 0px 0px rgb(208, 213, 70);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weatherBox--infoContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  margin: 30px;
+}
+
+.weatherBox--currentLocation {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 15px;
+  color: rgb(85, 85, 85);
+}
+
+.weatherBox--line{
+ 
+  width: 50px;
+  height: 5px;
+  background-color: rgb(5, 142, 228);
+}
+
+.weatherBox--cityName {
+  
+  font-size: 55px;
+  font-weight: bold;
+  color: rgb(5, 142, 228);
+}
+
+.weatherBox--imgContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.weatherBox--img {
+  width: 280px;
+}
+
+.weatherBox--temp {
+  margin-top: 20px;
+  font-size: 23px;
+  font-weight: bold;
+  color: rgb(3, 99, 158);
+}
+
+.weatherBox--description{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(3, 99, 158);
+  margin: 0;
+}
+
+.btn-container{
+  margin-top: 30px;
+}
+
+.btn-container button {
+  margin: 0 5px;
+}
+
+.btn-container button:hover {
+  cursor: pointer;
+  background-color:  rgb(208, 213, 70);
+  border: 1px solid transparent;
 }
